--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
 
+    <button id="clickme">Test Serial</button>
+
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
   </body>
