add button for open port

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
 
-    <button id="clickme">Test Serial</button>
+    <button id="request_ports">request Serial</button>
+    <button id="open_port">open port</button>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
